# ABA-Alignment-Protocol

./: .env.example  .gitignore  LICENSE  README.md  gen_log.txt  gen_log_dolphin.txt  implementation_plan.md  judge_log.txt  pyproject.toml  task.md
config/: settings.json
data/: dataset_aba_v1.0.jsonl  dataset_aba_v1.1.jsonl  dataset_aba_v1.2.jsonl  dataset_aba_v1.3.jsonl  dataset_aba_v1.4.jsonl  dataset_aba_v1.4_config2.jsonl  dataset_aba_v1.4_config3.jsonl  dataset_aba_v1.4_config4.jsonl
data/splits/: test.jsonl  (+2 more)
docs/: ENVIRONMENT_SETUP.md  MANIFESTO.md  TECHNICAL_ROADMAP.md  TECHNICAL_ROADMAP_state.md  documentation_strategy.md
prompts/: CHANGELOG.md  experiment_v1.2.txt  experiment_v1.4.txt
reports/: TR_phase_3_model_a_evaluation.md
schemas/: dataset_spec.json
scripts/: _audit_sensitive.py  _temp_inspect_v2.py  _test_resistant.py  analyze_smoke.py  cleanup_dpo_outputs.py  convert_dpo_to_sft.py  convert_to_markdown.py  debug_env.py  download_model.py  extract_comparison_pairs.py  forensics_eval_paired.py  forensics_root_cause_analysis.py  forensics_sft_audit.py  generate_baselines.py  generate_dpo_baselines.py  inspect_hh_rlhf.py  inspect_safety_datasets.py  judge_dpo.py  judge_entropy_joy.py  judge_responses.py  measure_tokens.py  merge_adapter.py  model_comparison_test.py  peek_remote_dataset.py  prepare_control_data.py  run_full_tournament.py  sample_dpo_qualitative.py  split_dataset.py  summarize_grades.py  summarize_phase_3e.py  summarize_results_3c.py  validate_sft_data.py  verify_dataset.py  verify_sft_inference.py
tests/: test_sft_pipeline.py
(+138 files in other folders)
